pl0.pegjs
/* Initializer
*/
{
  var tree = function(f, r) {
    if (r.length > 0) {
      var last = r.pop();
      var result = {
        type:  last[0],
        left: tree(f, r),
        right: last[1]
      };
    }
    else {
      var result = f;
    }
    return result;
  }
}

/*PROGRAMA*/

prog   = b:block DOT { return { type: 'program', block: b } }

/*BLOQUE*/

block  = VAR v:var p:proc s:st
           {

             return {
               type: 'block',
               vars: v,
               procs: p,
               st: s
             }
           }

       / CONST c:cons VAR v:var p:proc s:st
           {

             return {
               type: 'block',
               consts: c,
               vars: v,
               procs: p,
               st: s
             }
           }

       / CONST c:cons p:proc s:st
           {

             return {
               type: 'block',
               consts: c,
               procs: p,
               st: s
             }
           }

       / p:proc s:st
           {

             return {
               type: 'block',
               procs: p,
               st: s
             }
           }

/*CONSTANTE*/

cons   = i:ID ASSIGN n:NUMBER c:(COMMA ID ASSIGN NUMBER)* SEMICOLON?
           {

             var result = [{type: '=', left: i, right: n}];
             for (var x = 0; x < c.length; x++)
               result.push({type: '=', left: c[x][1], right: c[x][3]});

             return result;
           }

/*VARIABLE*/

var    = i:ID v:(COMMA ID)* SEMICOLON?
           {

             var ids = [i];
             for (var x = 0; x < v.length; x++)
               ids.push(v[x][1]);

             return ids;
           }

/*PROCEDIMIENTO*/

proc   = p:(PROCEDURE ID SEMICOLON block SEMICOLON)*
           {

             var result = [];
             for (var x = 0; x < p.length; x++)
               result.push({type: 'procedure', id: p[x][1], block: p[x][3]});

             return result;
           }

/*SENTENCIA*/

st     = i:ID ASSIGN e:exp SEMICOLON?
            { return { type: '=', left: i, right: e }; }

       / CALL i:ID
           {
             return { type: 'call', id: i,};
           }

       / BEGIN l:st r:(SEMICOLON st)* END SEMICOLON?
           {
             var result = [l];
               for (var i = 0; i < r.length; i++)
                 result.push(r[i][1]);

               return result;
           }

       / IF c:cond THEN st:st ELSE sf:st SEMICOLON?
           {
             return {
               type: 'IFELSE',
               condition:  c,
               true_st: st,
               false_st: sf,
             };
           }

       / IF c:cond THEN st:st SEMICOLON?
           {
             return {
               type: 'IF',
               condition:  c,
               st: st
             };
           }

       / WHILE c:cond DO st:st SEMICOLON?
           {
             return {
               type: 'IF',
               condition:  c,
               st: st
             };
           }

/*CONDICIONAL PL0*/

cond   = o:ODD e:exp { return { type: o, expression: e }; }
       / e1:exp c:COND e2:exp { return { type: c, left: e1, right: e2 }; }

/*EXPRESIONES MATEMÁTICAS CON LA ASOCIATIVIDAD CORRECTA*/

exp    = t:term   r:(ADD term)*   { return tree(t,r); }

term   = f:factor r:(MUL factor)* { return tree(f,r); }

factor = NUMBER
       / ID
       / LEFTPAR t:exp RIGHTPAR   { return t; }

/*BLANCOS*/

_ = $[ \t\n\r]*

/*OPERADORES*/

ASSIGN   = _ op:'=' _  { return op; }
ADD      = _ op:[+-] _ { return op; }
MUL      = _ op:[*/] _ { return op; }
COND     = _ op:$([<>=!][=]/[<>]) _ { return op; }

/*SIMBOLOS*/

LEFTPAR        = _"("_
RIGHTPAR       = _")"_
SEMICOLON      = _";"_
COMMA          = _","_
DOT            = _"."_

/*PALABRAS RESERVADAS*/

CALL      = _ "call" _
BEGIN     = _ "begin" _
END       = _ "end" _
PROCEDURE = _ "procedure" _
CONST     = _ "const" _
VAR       = _ "var" _
IF        = _ "if" _
THEN      = _ "then" _
ELSE      = _ "else" _
WHILE     = _ "while" _
DO        = _ "do" _
ODD       = _ "odd" _

/*IDENTIFICADORES Y NUMEROS*/


ID       = _ id:$([a-zA-Z_][a-zA-Z_0-9]*) _
            {
              return { type: 'ID', value: id };
            }
NUMBER   = _ digits:$[0-9]+ _
            {
              return { type: 'NUM', value: parseInt(digits, 10) };
            }
